[package]
name = "rsswebhook"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "2.9", features = ["json", "tls"] }
reqwest = { version = "0.13", features = ["json"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
