[package]
name = "rsswebhook"
version = "1.0.0"
edition = "2021"

[dependencies]
ureq = { version = "2.9", default-features = false, features = ["tls"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "true"
