[package]
name = "rsswebhook"
version = "1.0.0"
edition = "2021"

[dependencies]
ureq = { version = "2.9", default-features = false, features = ["tls"] }
rss = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
